--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "sqlalchemy>=2.0.36",
     "alembic>=1.14.0",
     "httpx>=0.27.2",
+    "requests>=2.32.3",
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
@@ -22,6 +23,7 @@ managed = true
 dev-dependencies = [
     "pytest>=8.3.3",
     "pytest-mock>=3.14.0",
+    "pillow>=11.0.0",
 ]
 
 [tool.hatch.metadata]
